<resources>
    <string name="app_name">Country Skillets powered by R.I.T.A.</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="powered_by">powered by</string>
    <string name="rita">R.I.T.A.</string>
    <string name="btn_begin">Begin</string>
    <string name="btn_locations">Locations</string>
    <string name="btn_vendors">Vendors</string>
    <string name="title_activity_vendors">Vendors</string>
    <string name="title_activity_locations">Locations</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="phone">###-###-####</string>
    <string name="item">Item</string>
    <string name="count">Count</string>
    <string name="manteca">Manteca</string>
    <string name="pittsburg_harbor">Pittsburg - Harbor</string>
    <string name="pittsburg_marina">Pittsburg - Marina</string>
    <string name="title_activity_inventory">Inventory</string>
    <string name="item_count">#</string>
    <string name="title_activity_add_location">Add Location</string>
    <string name="new_location_name">New Location Name</string>
    <string name="btn_add_image">Add Image</string>
    <string name="title_activity_add_item">Add New Item</string>
    <string name="group">Group</string>
    <string name="vendor">Vendor</string>
    <string name="btn_add_item">Add Item</string>
    <string name="restaurant_location">Restaurant Location</string>
    <string name="btn_show_inventory_summary">Show Inventory Summary</string>
    <string name="title_activity_inventory_report">InventoryReportActivity</string>
    <string name="btn_add_new_entry">Add New Entry</string>
    <string name="btn_edit_selected">Edit Selected</string>
    <string name="btn_remove_selected">Remove Selected</string>
    <string name="btn_clear_fields">Clear &amp; Add New Entry</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_minus">-</string>
    <string name="btn_plus">+</string>
</resources>
